<resources>
    <string name="app_name">Covid Bangladesh</string>
    <string name="title_activity_nav_bar">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="covid_map">Covid Map</string>
    <string name="about">About</string>
    <string name="covid_19">Covid-19</string>
    <string name="are_you_feeling_sick">Are You Feeling Sick?</string>
    <string name="if_you_feel_sick_with_any_of_covid_19_symptoms_please_call_or_mail_us_for_help">if you feel sick with any of covid-19 symptoms, please call or mail us for help.</string>
    <string name="call_now">Call Now</string>
    <string name="email_now">Email Now</string>
    <string name="symptoms">Symptoms</string>
    <string name="todo8">1</string>
    <string name="high_fever">High Fever</string>
    <string name="dry_cough">Dry Cough</string>
    <string name="tiredness">Tiredness</string>
    <string name="income">Income</string>
    <string name="requirements">Requirements</string>
    <string name="confirmed_cases">Confirmed Cases</string>
    <string name="_22k">22K</string>
    <string name="people1">People</string>
    <string name="people2">People</string>
    <string name="_8075k">8075K</string>
    <string name="_1343k">1343K</string>
    <string name="total_death">Total Death</string>
    <string name="total_recovered">Total Recovered</string>
    <string name="_1186k">1186K</string>
    <string name="people">People</string>
    <string name="new_test">New Test</string>
    <string name="todo1">TODO</string>
    <string name="design_developed_by">Design Developed By</string>
    <string name="md_aolad_hossain_anna">MD. AOLAD HOSSAIN ANNA</string>
    <string name="jr_software_engineer">jr_software_engineer</string>
    <string name="nexdecade_technology_pvt_ltd">nexdecade_technology_pvt_ltd</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo4">TODO</string>
    <string name="version_1_0_1">Version 1.0.1</string>
    <string name="check_update">check_update</string>
    <string name="bd_covid_map">BD_covid_map</string>
    <string name="live_data_need_internet_connection">live_data_need_internet_connection</string>
    <string name="people3">People</string>
    <string name="todo10">TODO</string>
    <string name="todo12">TODO</string>
    <string name="people10">People</string>
    <string name="todo2">ok</string>
    <string name="todo3">ij</string>
    <string name="bd_map">BD Map</string>
    <string name="world_map">World MAp</string>
    <string name="hello">Hello</string>
    <string name="bangladesh_s_total_covid_record">Bangladesh\'s Total Covid Record</string>
    <string name="bangladesh_today_covid_record">Bangladesh Today Covid Record</string>
    <string name="todo100">TODO</string>
    <string name="todo200">TODO</string>
    <string name="todo300">TODO</string>
    <string name="todo400">TODO</string>
    <string name="todo500">TODO</string>
    <string name="version_1_0_5">Version 1.0.5</string>
    <string name="check_update1">Check Update</string>
    <string name="jr_software_engineer1">Jr Software Engineer</string>
    <string name="nexdecad1e_technology_pvt_ltd">Nexdecade Technology Pvt Ltd</string>
    <string name="total_cases1">Total Cases</string>
    <string name="total_test5">Total Test</string>
    <string name="today_case">Today Case</string>
    <string name="today_death">Today Death</string>
    <string name="today_recovered">Today Recovered</string>
    <string name="today_test">Today Test</string>
    <string name="today_cases12">Today Cases</string>
    <string name="world_map585">World Map</string>
    <string name="bangladesh_covid_map">Bangladesh Covid Map</string>
    <string name="live_data_need_internet_connection1">Live Data Need Internet Connection</string>
    <string name="world_covid_wap">World Covid Wap</string>
    <string name="ok">OK</string>
    <string name="start_activity">start activity</string>
    <string name="fatigue">Fatigue</string>
    <string name="body_aches">Body aches</string>
    <string name="body_ache">Body Aches</string>
    <string name="headache">Headache</string>
    <string name="loss_of_taste">Loss of taste</string>
    <string name="loss_of_smell">Loss of smell</string>
    <string name="sore_throat">Sore Throat</string>
    <string name="runny_nose">Runny Nose</string>
    <string name="vomiting">Vomiting</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="loss_of_smell1">Loss of Smell</string>
    <string name="loss_of_tastes">Loss of Taste</string>
    <string name="wear_mask">Wear Mask</string>
    <string name="don_t_touch_face">Don\'t Touch Face</string>
    <string name="cook_well">Cook Well</string>
    <string name="social_distance">Social Distance</string>
    <string name="total_covid_record_in_bangladesh">Total Covid Record in Bangladesh</string>
    <string name="today_covid_record_in_bangladesh">Today Covid Record in Bangladesh</string>
    <string name="bottomsit">bottomsit</string>
    <string name="todo">TODO</string>
    <string name="pcr_test">PCR Test</string>
    <string name="plus">TODO</string>
    <string name="Null">-</string>
    <string name="today">Today</string>
    <string name="total">Total</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="anna">Anna</string>
    <string name="lofo">LOFO</string>
    <string name="emergency_333_call_mail_option"><![CDATA[✓ Emergency 333 Call & Mail Option]]></string>
    <string name="covid_symphtoms_and_requirements">✓ Covid Symphtoms and Requirements.</string>
    <string name="covid_19_bangladesh_data_today_total"><![CDATA[✓ Covid-19 Bangladesh Data (Today & Total).]]></string>
    <string name="covid_19_test_info">✓ Covid-19 Test Info.</string>
    <string name="covid_bangladesh_world_map"><![CDATA[✓ Covid Bangladesh & World Map.]]></string>
    <string name="vccine_informations">Vccine Informations</string>
    <string name="vaccine_informations">Vaccine Informations</string>
    <string name="vaccine_dashboard">Vaccine Dashboard</string>
    <string name="todo69">TODO</string>
    <string name="menu">Menu</string>
    <string name="edit_profile"><u>Edit Profile</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today_s_data">Today\'s Data</string>
</resources>