<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Home_Screen"
        android:icon="@drawable/ic_icons8_home__1_"
        android:textSize="14dp"
        android:title="@string/home" />

    <item
        android:id="@+id/Map2"
        android:icon="@drawable/vaccine"
        android:textSize="14dp"
        android:title="Vaccine Info." />
    <item
        android:id="@+id/Bottom_sheet"
        android:title="@string/Null" />
    <item
        android:id="@+id/Map"
        android:icon="@drawable/ic_bangladesh__1_"
        android:textSize="14dp"
        android:title="@string/bd_map" />
    <item
        android:id="@+id/About"
        android:icon="@drawable/menu"
        android:textSize="14dp"
        android:title="@string/menu" />
</menu>

